chore(deps): update library versions(JDK8 -> JDK17)
- Update jooq version from `3.9.3` to `3.19.8`
- Update jetty version from `9.3.7.v20160115` to `9.4.54.v20240208`
- Update itextpdf version from `7.0.0` to `7.2.6`
- Update docx4j version from `8.1.3` to `11.4.11`
- Update poi-ooxml version from `3.16` to `5.2.5`
- Update ant version from `1.9.15` to `1.10.14`
- Update commons-io version from `2.7` to `2.16.1`
- Add jakarta.xml.bind-api version `4.0.2`
- Add jaxb-runtime version `4.0.5`
- Add jakarta.activation-api