@@ -18,8 +18,9 @@ package org.tinywind.schemereporter.pdf;
 
 import com.itextpdf.io.font.PdfEncodings;
 import com.itextpdf.io.image.ImageDataFactory;
-import com.itextpdf.kernel.color.Color;
-import com.itextpdf.kernel.color.DeviceRgb;
+import com.itextpdf.kernel.colors.Color;
+import com.itextpdf.kernel.colors.ColorConstants;
+import com.itextpdf.kernel.colors.DeviceRgb;
 import com.itextpdf.kernel.font.PdfFont;
 import com.itextpdf.kernel.font.PdfFontFactory;
 import com.itextpdf.kernel.geom.PageSize;
@@ -28,16 +29,17 @@ import com.itextpdf.kernel.pdf.PdfWriter;
 import com.itextpdf.kernel.pdf.action.PdfAction;
 import com.itextpdf.kernel.pdf.canvas.draw.DottedLine;
 import com.itextpdf.layout.Document;
-import com.itextpdf.layout.border.Border;
-import com.itextpdf.layout.border.SolidBorder;
+import com.itextpdf.layout.borders.Border;
+import com.itextpdf.layout.borders.SolidBorder;
 import com.itextpdf.layout.element.*;
-import com.itextpdf.layout.property.TabAlignment;
-import com.itextpdf.layout.property.TextAlignment;
+import com.itextpdf.layout.properties.TabAlignment;
+import com.itextpdf.layout.properties.TextAlignment;
+import com.itextpdf.layout.properties.UnitValue;
 import org.apache.batik.transcoder.TranscoderException;
 import org.apache.commons.io.IOUtils;
+import org.jooq.meta.*;
 import org.jooq.tools.JooqLogger;
 import org.jooq.tools.StringUtils;
-import org.jooq.util.*;
 import org.tinywind.schemereporter.Reportable;
 import org.tinywind.schemereporter.jaxb.Generator;
 import org.tinywind.schemereporter.util.TableImage;
@@ -46,7 +48,7 @@ import java.io.File;
 import java.io.FileOutputStream;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 import static org.tinywind.schemereporter.util.TableImage.pngBytesFromSvg;
 
@@ -54,8 +56,8 @@ public class PdfReporter implements Reportable {
     private static final JooqLogger log = JooqLogger.getLogger(PdfReporter.class);
     private Database database;
     private Generator generator;
-    private Color lightGrey = new DeviceRgb(0xF5, 0xF5, 0xF5);
-    private Color darkBlue = new DeviceRgb(0x00, 0x00, 0x60);
+    private final Color lightGrey = new DeviceRgb(0xF5, 0xF5, 0xF5);
+    private final Color darkBlue = new DeviceRgb(0x00, 0x00, 0x60);
 
     @Override
     public void setDatabase(Database database) {
@@ -70,7 +72,7 @@ public class PdfReporter implements Reportable {
     @Override
     public final void generate(SchemaDefinition schema) throws Exception {
 
-        final byte[] fontBytes = IOUtils.toByteArray(getClass().getResourceAsStream("/asset/font/NanumMyeongjo.ttf"));
+        final byte[] fontBytes = IOUtils.toByteArray(Objects.requireNonNull(getClass().getResourceAsStream("/asset/font/NanumMyeongjo.ttf")));
         final PdfFont font = PdfFontFactory.createFont(fontBytes, PdfEncodings.IDENTITY_H);
 
         final SchemaVersionProvider schemaVersionProvider = schema.getDatabase().getSchemaVersionProvider();
@@ -83,8 +85,10 @@ public class PdfReporter implements Reportable {
 
         log.info("output file: " + file);
         final File path = file.getParentFile();
-        if (path != null)
-            path.mkdirs();
+        if (path != null) {
+            if (path.mkdirs()) log.info("created path: " + path);
+            else log.error("failed to create path: " + path);
+        }
 
         final List<EnumDefinition> enums = database.getEnums(schema);
         final List<TableDefinition> tables = database.getTables(schema);
@@ -104,7 +108,7 @@ public class PdfReporter implements Reportable {
 
         document.add(new Paragraph(new Text("Table of contents").setFontSize(14).setBold()).setTextAlignment(TextAlignment.CENTER));
 
-        if (enums.size() > 0) {
+        if (!enums.isEmpty()) {
             document.add(itemOfTableContents("Enum Definition", "Enum Definition"));
             for (Definition e : enums)
                 document.add(leafItemOfTableContents(e.getName(), "enum$" + e.getName()));
@@ -115,7 +119,7 @@ public class PdfReporter implements Reportable {
             document.add(leafItemOfTableContents(e.getName(), "table$" + e.getName()));
         document.add(new AreaBreak());
 
-        if (enums.size() > 0) {
+        if (!enums.isEmpty()) {
             final Div divEnums = chapter("Enum Definition");
             for (EnumDefinition e : enums)
                 divEnums.add(enumElement(e));
@@ -124,30 +128,22 @@ public class PdfReporter implements Reportable {
         }
 
         final Div divTableOverview = chapter("Table Definition");
-        divTableOverview.add(new Paragraph()
-                .add(createImage(totalRelationSvg, svgScaleRate, MAX_WIDTH, MAX_HEIGHT))
-                .setTextAlignment(TextAlignment.CENTER));
+        divTableOverview.add(new Paragraph().add(createImage(totalRelationSvg, svgScaleRate, MAX_WIDTH, MAX_HEIGHT)).setTextAlignment(TextAlignment.CENTER));
         document.add(divTableOverview);
         document.add(new AreaBreak());
 
         for (int i = 0; i < tables.size(); i++) {
             final TableDefinition e = tables.get(i);
-            final Div div = tableTitle(e)
-                    .add(new Paragraph()
-                            .add(createImage(relationSvg.get(e.getName()), svgScaleRate, MAX_WIDTH, MAX_HEIGHT))
-                            .setTextAlignment(TextAlignment.CENTER))
-                    .add(tableDefinition(e));
+            final Div div = tableTitle(e).add(new Paragraph().add(createImage(relationSvg.get(e.getName()), svgScaleRate, MAX_WIDTH, MAX_HEIGHT)).setTextAlignment(TextAlignment.CENTER)).add(tableDefinition(e));
 
-            if (e.getUniqueKeys().size() > 0)
-                div.add(tableUniqueKey(e));
+            if (!e.getUniqueKeys().isEmpty()) div.add(tableUniqueKey(e));
 
-            if (e.getColumns().stream().filter(c -> !StringUtils.isEmpty(c.getComment())).count() > 0)
+            if (e.getColumns().stream().anyMatch(c -> !StringUtils.isEmpty(c.getComment())))
                 div.add(tableColumnComments(e));
 
             document.add(div);
 
-            if (i + 1 < tables.size())
-                document.add(new AreaBreak());
+            if (i + 1 < tables.size()) document.add(new AreaBreak());
         }
 
         document.close();
@@ -178,30 +174,19 @@ public class PdfReporter implements Reportable {
     }
 
     private Div chapter(String title) {
-        final Div div = new Div()
-                .setDestination(title);
+        final Div div = new Div().setDestination(title);
 
-        div.add(new Paragraph(title)
-                .setFontSize(20)
-                .setPaddingBottom(10));
+        div.add(new Paragraph(title).setFontSize(20).setPaddingBottom(10));
 
         return div;
     }
 
     private Paragraph itemOfTableContents(String name, String desc) {
-        return new Paragraph()
-                .setAction(PdfAction.createGoTo(name))
-                .addTabStops(new TabStop(540, TabAlignment.RIGHT, new DottedLine()))
-                .add(new Text(desc).setFontSize(12).setItalic())
-                .add(new Tab());
+        return new Paragraph().setAction(PdfAction.createGoTo(name)).addTabStops(new TabStop(540, TabAlignment.RIGHT, new DottedLine())).add(new Text(desc).setFontSize(12).setItalic()).add(new Tab());
     }
 
     private Paragraph leafItemOfTableContents(String name, String desc) {
-        return new Paragraph()
-                .setAction(PdfAction.createGoTo(desc))
-                .addTabStops(new TabStop(540, TabAlignment.RIGHT, new DottedLine()))
-                .add(new Text(".     " + name).setFontSize(9))
-                .add(new Tab());
+        return new Paragraph().setAction(PdfAction.createGoTo(desc)).addTabStops(new TabStop(540, TabAlignment.RIGHT, new DottedLine())).add(new Text(".     " + name).setFontSize(9)).add(new Tab());
     }
 
     private <T extends IElement> Cell headerCell(BlockElement<T> element) {
@@ -213,7 +198,7 @@ public class PdfReporter implements Reportable {
     }
 
     private <T extends IElement> Cell cell(BlockElement<T> element, boolean underline) {
-        final Cell cell = new Cell().add(element).setBorder(new SolidBorder(Color.WHITE, 1)).setFontSize(8);
+        final Cell cell = new Cell().add(element).setBorder(new SolidBorder(ColorConstants.WHITE, 1)).setFontSize(8);
         if (underline) cell.setBorderBottom(new SolidBorder(lightGrey, 1));
         return cell;
     }
@@ -231,32 +216,17 @@ public class PdfReporter implements Reportable {
     }
 
     private Div tableTitle(TableDefinition e) {
-        final Paragraph title = new Paragraph()
-                .add(new Text(e.getName())
-                        .setFontSize(12));
+        final Paragraph title = new Paragraph().add(new Text(e.getName()).setFontSize(12));
         if (e.getComment() != null) {
-            final Text textComment = new Text("  " + e.getComment())
-                    .setFontSize(8)
-                    .setFontColor(com.itextpdf.kernel.color.Color.DARK_GRAY)
-                    .setTextRise(4);
+            final Text textComment = new Text("  " + e.getComment()).setFontSize(8).setFontColor(ColorConstants.DARK_GRAY).setTextRise(4);
             title.add(textComment);
         }
 
-        return new Div()
-                .setDestination("table$" + e.getName())
-                .add(title);
+        return new Div().setDestination("table$" + e.getName()).add(title);
     }
 
     private BlockElement<?> tableDefinition(TableDefinition e) {
-        final Table table = new Table(new float[]{20, 20, 6, 6, 8, 20, 20})
-                .setWidthPercent(100)
-                .addHeaderCell(headerCell("column"))
-                .addHeaderCell(headerCell("type"))
-                .addHeaderCell(headerCell("nullable").setTextAlignment(TextAlignment.CENTER))
-                .addHeaderCell(headerCell("pkey").setTextAlignment(TextAlignment.CENTER))
-                .addHeaderCell(headerCell("defaulted").setTextAlignment(TextAlignment.CENTER))
-                .addHeaderCell(headerCell("referred"))
-                .addHeaderCell(headerCell("refer"));
+        final Table table = new Table(new float[]{20, 20, 6, 6, 8, 20, 20}).setWidth(UnitValue.createPercentValue(100)).addHeaderCell(headerCell("column")).addHeaderCell(headerCell("type")).addHeaderCell(headerCell("nullable").setTextAlignment(TextAlignment.CENTER)).addHeaderCell(headerCell("pkey").setTextAlignment(TextAlignment.CENTER)).addHeaderCell(headerCell("defaulted").setTextAlignment(TextAlignment.CENTER)).addHeaderCell(headerCell("referred")).addHeaderCell(headerCell("refer"));
 
         for (int i = 0; i < e.getColumns().size(); i++) {
             final boolean presentBottom = i + 1 < e.getColumns().size();
@@ -269,7 +239,8 @@ public class PdfReporter implements Reportable {
             } else {
                 table.addCell(cell(type + (column.getType().getLength() != 0 ? "(" + column.getType().getLength() + ")" : ""), presentBottom));
             }
-            table.addCell(cell(column.isNullable() ? "●" : "", presentBottom).setTextAlignment(TextAlignment.CENTER));
+
+            table.addCell(cell(column.getType().isNullable() ? "●" : "", presentBottom).setTextAlignment(TextAlignment.CENTER));
             table.addCell(cell(column.getPrimaryKey() != null ? "●" : "", presentBottom).setTextAlignment(TextAlignment.CENTER));
             table.addCell(cell(column.getType().isDefaulted() ? "●" : "", presentBottom).setTextAlignment(TextAlignment.CENTER));
 
@@ -287,11 +258,7 @@ public class PdfReporter implements Reportable {
     }
 
     private BlockElement<?> tableUniqueKey(TableDefinition e) {
-        final Table table = new Table(new float[]{20, 30, 50})
-                .setWidthPercent(100)
-                .addHeaderCell(headerCell("unique key"))
-                .addHeaderCell(headerCell("columns"))
-                .addHeaderCell(headerCell("description"));
+        final Table table = new Table(new float[]{20, 30, 50}).setWidth(UnitValue.createPercentValue(100)).addHeaderCell(headerCell("unique key")).addHeaderCell(headerCell("columns")).addHeaderCell(headerCell("description"));
 
         for (int i = 0; i < e.getUniqueKeys().size(); i++) {
             final boolean presentBottom = i + 1 < e.getUniqueKeys().size();
@@ -307,16 +274,13 @@ public class PdfReporter implements Reportable {
     }
 
     private BlockElement<?> tableColumnComments(TableDefinition e) {
-        final Table table = new Table(new float[]{20, 80})
-                .setWidthPercent(100)
-                .addHeaderCell(headerCell("column"))
-                .addHeaderCell(headerCell("description"));
-        final java.util.List<ColumnDefinition> list = e.getColumns().stream().filter(column -> column.getComment() != null).collect(Collectors.toList());
+        final Table table = new Table(new float[]{20, 80}).setWidth(UnitValue.createPercentValue(100)).addHeaderCell(headerCell("column")).addHeaderCell(headerCell("description"));
+
+        final java.util.List<ColumnDefinition> list = e.getColumns().stream().filter(column -> column.getComment() != null).toList();
         for (int i = 0; i < list.size(); i++) {
             final boolean presentBottom = i + 1 < list.size();
             final ColumnDefinition column = list.get(i);
-            if (StringUtils.isEmpty(column.getComment()))
-                continue;
+            if (StringUtils.isEmpty(column.getComment())) continue;
             table.addCell(cell(column.getName(), presentBottom));
             table.addCell(cell(column.getComment(), presentBottom));
         }
@@ -328,13 +292,9 @@ public class PdfReporter implements Reportable {
             StringBuilder text = new StringBuilder("[" + (referenced ? fkey.getReferencedTable().getName() : fkey.getKeyTable().getName()) + "]");
             if (referenced)
                 for (ColumnDefinition column : fkey.getReferencedColumns()) text.append(" ").append(column.getName());
-            else
-                for (ColumnDefinition column : fkey.getKeyColumns()) text.append(" ").append(column.getName());
+            else for (ColumnDefinition column : fkey.getKeyColumns()) text.append(" ").append(column.getName());
             final Paragraph paragraph = new Paragraph(text.toString());
-            div.add(referenced
-                    ? paragraph.setItalic().setFontColor(darkBlue)
-                    .setAction(PdfAction.createGoTo("key$" + fkey.getReferencedKey().getName()))
-                    : paragraph);
+            div.add(referenced ? paragraph.setItalic().setFontColor(darkBlue).setAction(PdfAction.createGoTo("key$" + fkey.getReferencedKey().getName())) : paragraph);
         }
     }
 
@@ -342,14 +302,9 @@ public class PdfReporter implements Reportable {
         final String name = e.getName();
         final java.util.List<String> literals = e.getLiterals();
 
-        final Paragraph title = new Paragraph()
-                .add(new Text(name)
-                        .setFontSize(12));
+        final Paragraph title = new Paragraph().add(new Text(name).setFontSize(12));
         if (e.getComment() != null) {
-            final Text textComment = new Text("  " + e.getComment())
-                    .setFontSize(8)
-                    .setFontColor(com.itextpdf.kernel.color.Color.DARK_GRAY)
-                    .setTextRise(4);
+            final Text textComment = new Text("  " + e.getComment()).setFontSize(8).setFontColor(ColorConstants.DARK_GRAY).setTextRise(4);
             title.add(textComment);
         }
 
@@ -358,13 +313,12 @@ public class PdfReporter implements Reportable {
             string.append(literals.get(i)).append(i + 1 < literals.size() ? ", " : "");
         final Paragraph elements = new Paragraph(string.toString()).setFontSize(10);
 
-        final Table table = new Table(1)
-                .setWidthPercent(100);
+        final Table table = new Table(1).setWidth(UnitValue.createPercentValue(100));
         table.addCell(headerCell(title).setPadding(5));
         table.addCell(cell(elements).setPadding(3).setPaddingLeft(5));
         table.setDestination("enum$" + name);
         table.setMarginBottom(10);
-        table.setWidthPercent(100);
+        table.setWidth(UnitValue.createPercentValue(100));
         return table;
     }
 }
